ADM-363 refactor the RestTemplate to WebClient.