@@ -1,8 +1,5 @@
 package heartbeat.service.board.jira;
 
-import static java.util.Objects.isNull;
-import static org.springframework.http.HttpMethod.GET;
-
 import feign.FeignException;
 import heartbeat.client.JiraFeignClient;
 import heartbeat.client.dto.JiraBoardConfigDTO;
@@ -15,15 +12,17 @@ import heartbeat.controller.board.vo.response.StatusSelf;
 import heartbeat.exception.RequestFailedException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
-import org.springframework.http.HttpEntity;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
-
+import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,21 +31,24 @@ public class JiraService {
 
 	private final JiraFeignClient jiraFeignClient;
 
-	private final RestTemplate restTemplate;
+	@Autowired
+	private final WebClient.Builder webClientBuilder;
 
 	public BoardConfigResponse getJiraConfiguration(BoardRequest boardRequest) {
 		String url = "https://" + boardRequest.getSite() + ".atlassian.net";
 		JiraBoardConfigDTO jiraBoardConfigDTO;
 		try {
 			jiraBoardConfigDTO = jiraFeignClient.getJiraBoardConfiguration(URI.create(url), boardRequest.getBoardId(),
-				boardRequest.getToken());
+					boardRequest.getToken());
 			List<String> doneColumn = new ArrayList<>();
 
 			return BoardConfigResponse.builder()
-				.jiraColumns(jiraBoardConfigDTO.getColumnConfig().getColumns().stream()
-					.map(jiraColumn -> getColumnNameAndStatus(jiraColumn, boardRequest.getToken(), doneColumn)).toList())
-				.build();
-		} catch (FeignException e) {
+					.jiraColumns(jiraBoardConfigDTO.getColumnConfig().getColumns().stream()
+							.map(jiraColumn -> getColumnNameAndStatus(jiraColumn, boardRequest.getToken(), doneColumn))
+							.toList())
+					.build();
+		}
+		catch (FeignException e) {
 			log.error("Failed when call Jira to get board config", e);
 			throw new RequestFailedException(e);
 		}
@@ -57,11 +59,30 @@ public class JiraService {
 		String key = handleColumKey(doneColumn, statusSelfList);
 
 		return ColumnResponse.builder().key(key)
-			.value(ColumnValue.builder().name(jiraColumn.getName())
-				.statuses(statusSelfList.stream()
-					.map(statusSelf -> statusSelf.getUntranslatedName().toUpperCase()).toList())
-				.build())
-			.build();
+				.value(ColumnValue.builder().name(jiraColumn.getName())
+						.statuses(statusSelfList.stream()
+								.map(statusSelf -> statusSelf.getUntranslatedName().toUpperCase()).toList())
+						.build())
+				.build();
+	}
+
+	private List<StatusSelf> getStatusSelfList(JiraColumn jiraColumn, String token) {
+		List<Mono<StatusSelf>> statusSelfMonos = jiraColumn.getStatuses().stream()
+				.map(jiraColumnStatus -> getColumnStatusCategory(jiraColumnStatus.getSelf(), token))
+				.collect(Collectors.toList());
+
+		return Flux.merge(statusSelfMonos).collectList().block();
+	}
+
+	private Mono<StatusSelf> getColumnStatusCategory(String url, String token) {
+		return webClientBuilder.build().get().uri(url).header(HttpHeaders.AUTHORIZATION, token).retrieve().onStatus(
+				HttpStatusCode::is4xxClientError,
+				clientResponse -> Mono.error(new RequestFailedException(clientResponse.statusCode().value(),
+						"Failed when call Jira to get column")))
+				.onStatus(HttpStatusCode::is5xxServerError,
+						clientResponse -> Mono.error(new RequestFailedException(clientResponse.statusCode().value(),
+								"Failed when call Jira to get column")))
+				.bodyToMono(StatusSelf.class);
 	}
 
 	private String handleColumKey(List<String> doneColumn, List<StatusSelf> statusSelfList) {
@@ -71,29 +92,8 @@ public class JiraService {
 				doneColumn.add(statusSelf.getUntranslatedName().toUpperCase());
 			}
 			return statusSelf.getStatusCategory().getKey();
-		}).anyMatch(statusSelf -> statusSelf.equals(doneTag)) ? doneTag :
-			statusSelfList.stream().reduce((pre, last) -> last).orElse(StatusSelf.builder().build()).getStatusCategory().getName();
-	}
-
-	private List<StatusSelf> getStatusSelfList(JiraColumn jiraColumn, String token) {
-		return jiraColumn.getStatuses().stream()
-			.map(jiraColumnStatus -> getColumnStatusCategory(jiraColumnStatus.getSelf(), token)).toList();
-	}
-
-	private StatusSelf getColumnStatusCategory(String url, String token) {
-		ResponseEntity<StatusSelf> exchange = restTemplate.exchange(url, GET, new HttpEntity<>(buildHttpHeaders(token)),
-			StatusSelf.class);
-		if (isNull(exchange.getBody())) {
-			throw new RequestFailedException(exchange.getStatusCode().value(),
-				"Failed when call Jira to get colum body is null");
-		}
-		return exchange.getBody();
-	}
-
-	public HttpHeaders buildHttpHeaders(String token) {
-		var headers = new HttpHeaders();
-		headers.add("Authorization", token);
-		return headers;
+		}).anyMatch(statusSelf -> statusSelf.equals(doneTag)) ? doneTag : statusSelfList.stream()
+				.reduce((pre, last) -> last).orElse(StatusSelf.builder().build()).getStatusCategory().getName();
 	}
 
 }
